--- a/pandas_practice.ipynb
+++ b/pandas_practice.ipynb
@@ -692,13 +692,21 @@
     "\n",
     "schools_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "42d826d2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PythonData",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
-   "name": "pythondata"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -710,7 +718,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "0f8cc066865c3c6b7a3844b5cfca0306f84912a0765c407ea4cf3800672ada36"
+   }
   }
  },
  "nbformat": 4,
